[gd_scene load_steps=21 format=2]

[ext_resource path="res://Fonts/Bold_Ita_32.tres" type="DynamicFont" id=1]
[ext_resource path="res://Fonts/Normal_32.tres" type="DynamicFont" id=2]
[ext_resource path="res://Fonts/Ita_32.tres" type="DynamicFont" id=3]
[ext_resource path="res://Fonts/Bold_32.tres" type="DynamicFont" id=4]
[ext_resource path="res://Fonts/Bold_45_colored.tres" type="DynamicFont" id=5]
[ext_resource path="res://Fonts/Mono_32.tres" type="DynamicFont" id=6]
[ext_resource path="res://Themes/H_Separator2.tres" type="StyleBox" id=7]
[ext_resource path="res://Calculate_meal.gd" type="Script" id=8]
[ext_resource path="res://THEME.tres" type="Theme" id=9]

[sub_resource type="StyleBoxLine" id=24]
resource_local_to_scene = true
resource_name = "HSeparator_theme"
color = Color( 0.431373, 0.435294, 0.447059, 1 )
thickness = 3

[sub_resource type="DynamicFontData" id=1]
font_path = "res://Gruppo-Regular.ttf"

[sub_resource type="DynamicFont" id=10]
font_data = SubResource( 1 )

[sub_resource type="DynamicFont" id=11]

[sub_resource type="Theme" id=4]
Fonts/fonts/large = SubResource( 10 )
Fonts/fonts/normal = SubResource( 11 )
HSeparator/colors/color = Color( 0.780392, 0.0745098, 0.0745098, 1 )
HSeparator/constants/separation = 4
HSeparator/styles/separator = ExtResource( 7 )
RichTextLabel/colors/default_color = Color( 0.431373, 0.435294, 0.447059, 1 )
RichTextLabel/colors/font_color_selected = Color( 0.431373, 0.435294, 0.447059, 1 )
RichTextLabel/colors/selection_color = Color( 0.101961, 0.101961, 1, 0.8 )
RichTextLabel/fonts/bold_font = ExtResource( 4 )
RichTextLabel/fonts/bold_italics_font = ExtResource( 5 )
RichTextLabel/fonts/italics_font = ExtResource( 3 )
RichTextLabel/fonts/mono_font = ExtResource( 6 )
RichTextLabel/fonts/normal_font = ExtResource( 2 )
RichTextLabel/fonts/test = ExtResource( 5 )

[sub_resource type="Theme" id=25]
resource_local_to_scene = true
default_font = ExtResource( 5 )
SpinBox/icons/updown = null

[sub_resource type="DynamicFontData" id=6]
font_path = "res://Gruppo-Regular.ttf"

[sub_resource type="DynamicFont" id=7]
font_data = SubResource( 6 )

[sub_resource type="DynamicFont" id=8]

[sub_resource type="Theme" id=9]
Fonts/fonts/large = SubResource( 7 )
Fonts/fonts/normal = SubResource( 8 )

[sub_resource type="StyleBoxLine" id=22]
color = Color( 0.431373, 0.435294, 0.447059, 1 )
grow_begin = 2.0
grow_end = 5.0
thickness = 2

[node name="Calculate_meal" type="Control"]
script = ExtResource( 8 )
dropdown1 = NodePath("VBoxContainer2/HBoxContainer/VBoxContainer/Dropdown1")
dropdown2 = NodePath("VBoxContainer2/HBoxContainer/VBoxContainer2/Dropdown2")
static2Box = NodePath("VBoxContainer2/Static2Box")
weglowodany = NodePath("VBoxContainer2/Static2Box/PelnyProces/VBoxContainer/CenterContainer/Value1")
blonnik = NodePath("VBoxContainer2/Static2Box/PelnyProces/VBoxContainer2/CenterContainer/Value2")
bialko = NodePath("VBoxContainer2/Static2Box/PelnyProces/VBoxContainer3/CenterContainer/Value3")
tluszcz = NodePath("VBoxContainer2/Static2Box/PelnyProces/VBoxContainer4/CenterContainer/Value4")
WW_WBT_kcal_value_box = NodePath("VBoxContainer2/Static2Box/WW_WBT_kcal_value_box")
WW_value_label = NodePath("VBoxContainer2/Static2Box/WW_WBT_kcal_value_box/WW_value_label")
WBT_value_label = NodePath("VBoxContainer2/Static2Box/WW_WBT_kcal_value_box/WBT_value_label")
kcal_value_label = NodePath("VBoxContainer2/Static2Box/WW_WBT_kcal_value_box/kcal_value_label")
JI_time_value_label = NodePath("VBoxContainer2/Static2Box/JI_time_value_label")

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
margin_right = 1036.0
margin_bottom = 366.0

[node name="HSeparator" type="HSeparator" parent="VBoxContainer2"]
margin_right = 1036.0
margin_bottom = 4.0
custom_styles/separator = SubResource( 24 )

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer2"]
margin_top = 8.0
margin_right = 1036.0
margin_bottom = 12.0
custom_styles/separator = SubResource( 24 )

[node name="HSeparator3" type="HSeparator" parent="VBoxContainer2"]
margin_top = 16.0
margin_right = 1036.0
margin_bottom = 20.0
custom_styles/separator = SubResource( 24 )

[node name="TitleLabel" type="RichTextLabel" parent="VBoxContainer2"]
margin_top = 24.0
margin_right = 1036.0
margin_bottom = 64.0
theme = SubResource( 4 )
custom_fonts/mono_font = ExtResource( 6 )
custom_fonts/bold_italics_font = ExtResource( 1 )
custom_fonts/italics_font = ExtResource( 3 )
custom_fonts/bold_font = ExtResource( 4 )
custom_fonts/normal_font = ExtResource( 2 )
bbcode_enabled = true
bbcode_text = "[b][center]Jak wyliczyć JI do posiłku?"
text = "Jak wyliczyć JI do posiłku?"
fit_content_height = true
__meta__ = {
"_editor_description_": ""
}

[node name="HSeparator4" type="HSeparator" parent="VBoxContainer2"]
margin_top = 68.0
margin_right = 1036.0
margin_bottom = 72.0
custom_styles/separator = SubResource( 24 )

[node name="HSeparator5" type="HSeparator" parent="VBoxContainer2"]
margin_top = 76.0
margin_right = 1036.0
margin_bottom = 80.0
custom_styles/separator = SubResource( 24 )

[node name="HSeparator6" type="HSeparator" parent="VBoxContainer2"]
margin_top = 84.0
margin_right = 1036.0
margin_bottom = 88.0
custom_styles/separator = SubResource( 24 )

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer2"]
margin_top = 92.0
margin_right = 1036.0
margin_bottom = 221.0

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer2/HBoxContainer"]
margin_right = 400.0
margin_bottom = 129.0

[node name="Value2" type="SpinBox" parent="VBoxContainer2/HBoxContainer/VBoxContainer"]
margin_left = 127.0
margin_right = 273.0
margin_bottom = 65.0
rect_min_size = Vector2( 0, 65 )
hint_tooltip = "Węglowodany"
focus_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = SubResource( 25 )
max_value = 1000.0
step = 0.01
align = 1
suffix = "g"
__meta__ = {
"_editor_description_": ""
}

[node name="Dropdown1" type="OptionButton" parent="VBoxContainer2/HBoxContainer/VBoxContainer"]
margin_top = 69.0
margin_right = 400.0
margin_bottom = 129.0
rect_min_size = Vector2( 400, 60 )
theme = ExtResource( 9 )

[node name="Control" type="Control" parent="VBoxContainer2/HBoxContainer"]
margin_left = 404.0
margin_right = 632.0
margin_bottom = 129.0
size_flags_horizontal = 3

[node name="VBoxContainer2" type="VBoxContainer" parent="VBoxContainer2/HBoxContainer"]
margin_left = 636.0
margin_right = 1036.0
margin_bottom = 129.0

[node name="Value3" type="SpinBox" parent="VBoxContainer2/HBoxContainer/VBoxContainer2"]
margin_left = 127.0
margin_right = 273.0
margin_bottom = 65.0
rect_min_size = Vector2( 0, 65 )
hint_tooltip = "Węglowodany"
focus_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = SubResource( 25 )
max_value = 1000.0
step = 0.01
align = 1
suffix = "g"
__meta__ = {
"_editor_description_": ""
}

[node name="Dropdown2" type="OptionButton" parent="VBoxContainer2/HBoxContainer/VBoxContainer2"]
margin_top = 69.0
margin_right = 400.0
margin_bottom = 129.0
rect_min_size = Vector2( 400, 60 )
theme = ExtResource( 9 )

[node name="Static2Box" type="VBoxContainer" parent="VBoxContainer2"]
margin_top = 225.0
margin_right = 1036.0
margin_bottom = 366.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HSeparator7" type="HSeparator" parent="VBoxContainer2/Static2Box"]
margin_right = 1036.0
margin_bottom = 4.0
custom_styles/separator = SubResource( 24 )

[node name="HSeparator8" type="HSeparator" parent="VBoxContainer2/Static2Box"]
margin_top = 8.0
margin_right = 1036.0
margin_bottom = 12.0
custom_styles/separator = SubResource( 24 )

[node name="HSeparator9" type="HSeparator" parent="VBoxContainer2/Static2Box"]
margin_top = 16.0
margin_right = 1036.0
margin_bottom = 20.0
custom_styles/separator = SubResource( 24 )

[node name="PelnyProces" type="HBoxContainer" parent="VBoxContainer2/Static2Box"]
margin_top = 24.0
margin_right = 1036.0
margin_bottom = 133.0

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer2/Static2Box/PelnyProces"]
margin_right = 220.0
margin_bottom = 109.0

[node name="Weglowodany" type="RichTextLabel" parent="VBoxContainer2/Static2Box/PelnyProces/VBoxContainer"]
margin_right = 220.0
margin_bottom = 40.0
rect_min_size = Vector2( 220, 0 )
size_flags_stretch_ratio = 0.35
theme = SubResource( 4 )
custom_fonts/mono_font = ExtResource( 6 )
custom_fonts/bold_italics_font = ExtResource( 5 )
custom_fonts/italics_font = ExtResource( 3 )
custom_fonts/bold_font = ExtResource( 4 )
custom_fonts/normal_font = ExtResource( 2 )
bbcode_enabled = true
bbcode_text = "[center]Węglowodany:"
text = "Węglowodany:"
fit_content_height = true
__meta__ = {
"_editor_description_": ""
}

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer2/Static2Box/PelnyProces/VBoxContainer"]
margin_top = 44.0
margin_right = 220.0
margin_bottom = 109.0

[node name="Value1" type="SpinBox" parent="VBoxContainer2/Static2Box/PelnyProces/VBoxContainer/CenterContainer"]
margin_left = 37.0
margin_right = 183.0
margin_bottom = 65.0
rect_min_size = Vector2( 0, 65 )
hint_tooltip = "Węglowodany"
focus_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
theme = SubResource( 25 )
max_value = 1000.0
step = 0.01
align = 1
suffix = "g"
__meta__ = {
"_editor_description_": ""
}

[node name="VBoxContainer2" type="VBoxContainer" parent="VBoxContainer2/Static2Box/PelnyProces"]
margin_left = 224.0
margin_right = 424.0
margin_bottom = 109.0

[node name="Blonnik" type="RichTextLabel" parent="VBoxContainer2/Static2Box/PelnyProces/VBoxContainer2"]
margin_right = 200.0
margin_bottom = 40.0
rect_min_size = Vector2( 200, 0 )
size_flags_stretch_ratio = 0.35
theme = SubResource( 4 )
custom_fonts/mono_font = ExtResource( 6 )
custom_fonts/bold_italics_font = ExtResource( 5 )
custom_fonts/italics_font = ExtResource( 3 )
custom_fonts/bold_font = ExtResource( 4 )
custom_fonts/normal_font = ExtResource( 2 )
bbcode_enabled = true
bbcode_text = "[center]Błonnik:"
text = "Błonnik:"
fit_content_height = true
__meta__ = {
"_editor_description_": ""
}

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer2/Static2Box/PelnyProces/VBoxContainer2"]
margin_top = 44.0
margin_right = 200.0
margin_bottom = 109.0

[node name="Value2" type="SpinBox" parent="VBoxContainer2/Static2Box/PelnyProces/VBoxContainer2/CenterContainer"]
margin_left = 27.0
margin_right = 173.0
margin_bottom = 65.0
rect_min_size = Vector2( 0, 65 )
focus_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
theme = SubResource( 25 )
max_value = 1000.0
step = 0.01
align = 1
suffix = "g"
__meta__ = {
"_editor_description_": ""
}

[node name="VBoxContainer3" type="VBoxContainer" parent="VBoxContainer2/Static2Box/PelnyProces"]
margin_left = 428.0
margin_right = 628.0
margin_bottom = 109.0

[node name="Bialko" type="RichTextLabel" parent="VBoxContainer2/Static2Box/PelnyProces/VBoxContainer3"]
margin_right = 200.0
margin_bottom = 40.0
rect_min_size = Vector2( 200, 0 )
size_flags_stretch_ratio = 0.35
theme = SubResource( 4 )
custom_fonts/mono_font = ExtResource( 6 )
custom_fonts/bold_italics_font = ExtResource( 5 )
custom_fonts/italics_font = ExtResource( 3 )
custom_fonts/bold_font = ExtResource( 4 )
custom_fonts/normal_font = ExtResource( 2 )
bbcode_enabled = true
bbcode_text = "[center]Białko:"
text = "Białko:"
fit_content_height = true
__meta__ = {
"_editor_description_": ""
}

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer2/Static2Box/PelnyProces/VBoxContainer3"]
margin_top = 44.0
margin_right = 200.0
margin_bottom = 109.0

[node name="Value3" type="SpinBox" parent="VBoxContainer2/Static2Box/PelnyProces/VBoxContainer3/CenterContainer"]
margin_left = 27.0
margin_right = 173.0
margin_bottom = 65.0
rect_min_size = Vector2( 0, 65 )
focus_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
theme = SubResource( 25 )
max_value = 1000.0
step = 0.01
align = 1
suffix = "g"
__meta__ = {
"_editor_description_": ""
}

[node name="VBoxContainer4" type="VBoxContainer" parent="VBoxContainer2/Static2Box/PelnyProces"]
margin_left = 632.0
margin_right = 832.0
margin_bottom = 109.0

[node name="Tluszcz" type="RichTextLabel" parent="VBoxContainer2/Static2Box/PelnyProces/VBoxContainer4"]
margin_right = 200.0
margin_bottom = 40.0
rect_min_size = Vector2( 200, 0 )
size_flags_stretch_ratio = 0.35
theme = SubResource( 4 )
custom_fonts/mono_font = ExtResource( 6 )
custom_fonts/bold_italics_font = ExtResource( 5 )
custom_fonts/italics_font = ExtResource( 3 )
custom_fonts/bold_font = ExtResource( 4 )
custom_fonts/normal_font = ExtResource( 2 )
bbcode_enabled = true
bbcode_text = "[center]Tłuszcz:"
text = "Tłuszcz:"
fit_content_height = true
__meta__ = {
"_editor_description_": ""
}

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer2/Static2Box/PelnyProces/VBoxContainer4"]
margin_top = 44.0
margin_right = 200.0
margin_bottom = 109.0
rect_min_size = Vector2( 200, 65 )

[node name="Value4" type="SpinBox" parent="VBoxContainer2/Static2Box/PelnyProces/VBoxContainer4/CenterContainer"]
margin_left = 25.0
margin_right = 175.0
margin_bottom = 65.0
rect_min_size = Vector2( 150, 65 )
focus_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
theme = SubResource( 25 )
max_value = 1000.0
step = 0.01
rounded = true
align = 1
suffix = "g"
__meta__ = {
"_editor_description_": ""
}

[node name="VBoxContainer5" type="VBoxContainer" parent="VBoxContainer2/Static2Box/PelnyProces"]
margin_left = 836.0
margin_right = 1036.0
margin_bottom = 109.0

[node name="Oblicz" type="RichTextLabel" parent="VBoxContainer2/Static2Box/PelnyProces/VBoxContainer5"]
margin_right = 200.0
margin_bottom = 40.0
rect_min_size = Vector2( 200, 0 )
size_flags_stretch_ratio = 0.35
theme = SubResource( 4 )
custom_fonts/mono_font = ExtResource( 6 )
custom_fonts/bold_italics_font = ExtResource( 5 )
custom_fonts/italics_font = ExtResource( 3 )
custom_fonts/bold_font = ExtResource( 4 )
custom_fonts/normal_font = ExtResource( 2 )
bbcode_enabled = true
bbcode_text = "[center]Oblicz:"
text = "Oblicz:"
fit_content_height = true
__meta__ = {
"_editor_description_": ""
}

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer2/Static2Box/PelnyProces/VBoxContainer5"]
margin_top = 44.0
margin_right = 200.0
margin_bottom = 109.0

[node name="CalculateButton2" type="Button" parent="VBoxContainer2/Static2Box/PelnyProces/VBoxContainer5/CenterContainer"]
margin_left = 25.0
margin_right = 175.0
margin_bottom = 65.0
rect_min_size = Vector2( 150, 65 )
custom_fonts/font = ExtResource( 5 )
text = "Oblicz"

[node name="WW_WBT_kcal_value_box" type="HBoxContainer" parent="VBoxContainer2/Static2Box"]
visible = false
margin_top = 113.0
margin_right = 1072.0
margin_bottom = 173.0

[node name="WW_value_label" type="RichTextLabel" parent="VBoxContainer2/Static2Box/WW_WBT_kcal_value_box"]
margin_right = 354.0
margin_bottom = 60.0
rect_min_size = Vector2( 120, 60 )
size_flags_horizontal = 3
theme = SubResource( 9 )
custom_fonts/mono_font = ExtResource( 6 )
custom_fonts/bold_italics_font = ExtResource( 5 )
custom_fonts/italics_font = ExtResource( 3 )
custom_fonts/bold_font = ExtResource( 4 )
custom_fonts/normal_font = ExtResource( 2 )
bbcode_enabled = true
bbcode_text = "[b][i]WW"
text = "WW"
fit_content_height = true
__meta__ = {
"_editor_description_": ""
}

[node name="WBT_value_label" type="RichTextLabel" parent="VBoxContainer2/Static2Box/WW_WBT_kcal_value_box"]
margin_left = 358.0
margin_right = 713.0
margin_bottom = 60.0
rect_min_size = Vector2( 120, 60 )
size_flags_horizontal = 3
theme = SubResource( 9 )
custom_fonts/mono_font = ExtResource( 6 )
custom_fonts/bold_italics_font = ExtResource( 5 )
custom_fonts/italics_font = ExtResource( 3 )
custom_fonts/bold_font = ExtResource( 4 )
custom_fonts/normal_font = ExtResource( 2 )
bbcode_enabled = true
bbcode_text = "[b][i]WBT"
text = "WBT"
fit_content_height = true
__meta__ = {
"_editor_description_": ""
}

[node name="kcal_value_label" type="RichTextLabel" parent="VBoxContainer2/Static2Box/WW_WBT_kcal_value_box"]
margin_left = 717.0
margin_right = 1072.0
margin_bottom = 60.0
rect_min_size = Vector2( 120, 60 )
size_flags_horizontal = 3
theme = SubResource( 9 )
custom_fonts/mono_font = ExtResource( 6 )
custom_fonts/bold_italics_font = ExtResource( 5 )
custom_fonts/italics_font = ExtResource( 3 )
custom_fonts/bold_font = ExtResource( 4 )
custom_fonts/normal_font = ExtResource( 2 )
bbcode_enabled = true
bbcode_text = "[b][i]kcal"
text = "kcal"
fit_content_height = true
__meta__ = {
"_editor_description_": ""
}

[node name="JI_time_value_label" type="RichTextLabel" parent="VBoxContainer2/Static2Box"]
visible = false
margin_top = 113.0
margin_right = 1072.0
margin_bottom = 173.0
rect_min_size = Vector2( 500, 60 )
size_flags_stretch_ratio = 0.9
theme = SubResource( 9 )
custom_fonts/mono_font = ExtResource( 6 )
custom_fonts/bold_italics_font = ExtResource( 5 )
custom_fonts/italics_font = ExtResource( 3 )
custom_fonts/bold_font = ExtResource( 4 )
custom_fonts/normal_font = ExtResource( 2 )
bbcode_enabled = true
bbcode_text = "Kliknij [b][i]<Oblicz>[/i][/b] aby poznać WW, WBT i kcal posiłku"
text = "Kliknij <Oblicz> aby poznać WW, WBT i kcal posiłku"
fit_content_height = true
__meta__ = {
"_editor_description_": ""
}

[node name="HSeparator6" type="HSeparator" parent="VBoxContainer2/Static2Box"]
margin_top = 137.0
margin_right = 1036.0
margin_bottom = 141.0
theme = ExtResource( 9 )
custom_styles/separator = SubResource( 22 )

[connection signal="pressed" from="VBoxContainer2/Static2Box/PelnyProces/VBoxContainer5/CenterContainer/CalculateButton2" to="." method="calculate_WW_WBT_values"]
